--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -2,7 +2,7 @@ NAME = philo_bonus
 
 DIR = philo_bonus
 
-SRC = philosophers_main.c philosophers_mutex.c philosophers_utils.c
+SRC = philosophers_main_bonus.c philosophers_semaphor_bonus.c philosophers_utils_bonus.c
 
 SRC_OBJ = $(SRC:%.c=%.o)
 
@@ -16,7 +16,9 @@ FSA = -fsanitize=address
 
 RM = rm -f
 
-bonus : $(NAME)
+all : $(NAME)
+
+bonus : all
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
